QMake: fix filename normalization

apart from various project tree related issues, we've also seen crashes.

Task-number: QTCREATORBUG-17364
Change-Id: I61bb8aff301a048646ed97f8fa2c825cbff8d2cb
Reviewed-by: Tim Jenssen <tim.jenssen@qt.io>